\name{NEWS}
\title{NEWS for the R Package Luminescence}
\section{Changes in version 0.6.0 (,2016)}{


  \subsection{New functions}{
   \itemize{
     \item \code{plot_DetPlot()}: Plots the equivalent dose (De) in dependency of the chosen
       signal integral (cf. Bailey et al., 2003; #23).
   }
  }

  \subsection{Bugfixes and changes}{
   \itemize{


      \item \code{Dummy()}
      \itemize{

        \item dummy


      }
   }
  }
 }


