@@ -36,7 +36,7 @@
 #' @note Due to changes in the BIN-file (version 3 to version 4) format the recalculation of TL-curves might be not
 #' overall correct for cases where the TL measurement is combined with a preheat.
 #'
-#' @section Function version: 0.2.1
+#' @section Function version: 0.2.2
 #'
 #' @author Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France),
 #' Christoph Burow, Universtiy of Cologne (Germany)
@@ -52,7 +52,6 @@
 #'
 #' @examples
 #'
-#'
 #' ##get package example data
 #' data(ExampleData.BINfileData, envir = environment())
 #'
@@ -63,9 +62,9 @@
 Risoe.BINfileData2RLum.Data.Curve <- function(
   object,
   id,
-  pos,
-  run,
-  set
+  pos = NULL,
+  run = NULL,
+  set = NULL
 ){
 
 
@@ -78,13 +77,13 @@ Risoe.BINfileData2RLum.Data.Curve <- function(
   ##if id is set, no input for pos and rund is nescessary
   if(missing(id)){
 
-    if(missing(pos) == TRUE | missing(run) == TRUE | missing(set) == TRUE){
+    if(is.null(pos) | is.null(run) | is.null(set)){
 
-      temp.missing.arguments <- paste(c(if(missing(pos)==TRUE){"pos"},
-                                        if(missing(set)==TRUE){"set"},
-                                        if(missing(run)==TRUE){"run"}), collapse=", ")
+      temp.missing.arguments <- paste(c(if(is.null(pos)){"pos"},
+                                        if(is.null(set)){"set"},
+                                        if(is.null(run)){"run"}), collapse=", ")
 
-      stop(paste("[Risoe.BINfileData2RLum.Data.Curve()] Arguments are missing: ",
+      stop(paste("[Risoe.BINfileData2RLum.Data.Curve()] Arguments NULL whil 'id' is missing: ",
                  temp.missing.arguments, ". Or set id.", sep = ""))
 
     }
@@ -102,22 +101,22 @@ Risoe.BINfileData2RLum.Data.Curve <- function(
     }
 
     if (length(which(pos/1:48 == 1)) == 0){
-      stop("[Risoe.BINfileData2RLum.Data.Curve()] Value for 'pos' out of bounds.")
+      stop("[Risoe.BINfileData2RLum.Data.Curve()] Value for 'pos' out of bounds. Max. 48.")
     }
 
     ##get and check valid positions
     positions.valid <- paste(as.character(unique(object@METADATA[,"POSITION"])), collapse=", ")
 
-    if ((pos %in% unique(object@METADATA[,"POSITION"])) == FALSE){
-      stop(paste("[Risoe.BINfileData2RLum.Data.Curve] Error: pos = ",pos, " is not valid.
+    if (!any(pos == object@METADATA[,"POSITION"])){
+      stop(paste("[Risoe.BINfileData2RLum.Data.Curve()] pos = ",pos, " is not valid.
                Valid positions are: ", positions.valid, sep=""))
     }
 
     ##get and check valid positions
     positions.valid <- paste(as.character(unique(object@METADATA[,"SET"])), collapse=", ")
 
-    if ((set %in% unique(object@METADATA[,"SET"])) == FALSE){
-      stop(paste("[Risoe.BINfileData2RLum.Data.Curve] Error: set = ",set, " is not valid.
+    if (!any(set == object@METADATA[,"SET"])){
+      stop(paste("[Risoe.BINfileData2RLum.Data.Curve()] set = ",set, " is not valid.
                Valid values are: ", positions.valid, sep=""))
     }
 
@@ -125,17 +124,18 @@ Risoe.BINfileData2RLum.Data.Curve <- function(
     ##get and check valid positions
     positions.valid <- paste(as.character(unique(object@METADATA[,"RUN"])), collapse=", ")
 
-    if ((run %in% unique(object@METADATA[,"RUN"])) == FALSE){
-      stop(paste("[Risoe.BINfileData2RLum.Data.Curve] Error: run = ",run, " is not valid.
+    if (!any(run == object@METADATA[,"RUN"])){
+      stop(paste("[Risoe.BINfileData2RLum.Data.Curve()] run = ",run, " is not valid.
                Valid values are: ", positions.valid, sep=""))
     }
 
   }else{
 
-    ##check if id is valid at all
-    temp.range.id <- range(object@METADATA[,"ID"])
+    if (!any(id == object@METADATA[,"ID"])){
 
-    if ((id %in% unique(object@METADATA[,"ID"])) == FALSE){
+      ##check if id is valid at all
+      temp.range.id <- range(object@METADATA[,"ID"])
+
       stop(paste("[Risoe.BINfileData2RLum.Data.Curve()] id = ",id, " is not a valid record id. Allowed value range ", min(temp.range.id), " : ", max(temp.range.id),".", sep=""))
 
     }
@@ -194,19 +194,19 @@ Risoe.BINfileData2RLum.Data.Curve <- function(
 
     }
 
-    temp.y <- unlist(object@DATA[id])
+    temp.y <- unlist(object@DATA[id], use.names = FALSE)
 
 
   }else{
     temp.x <- NA
     temp.y <- NA
 
-    warning("NPOINTS was 0, RLum.Data.Curve-object with NA-values produced.")
+    warning("[Risoe.BINfileData2RLum.Data.Curve()] NPOINTS was 0, RLum.Data.Curve-object with NA-values produced.")
 
   }
 
 
-  temp.data <- matrix(c(temp.x,temp.y), ncol=2, byrow=FALSE)
+  temp.data <- matrix(c(temp.x, temp.y), ncol = 2, byrow = FALSE)
   temp.recordType <- as.character(object@METADATA[id,"LTYPE"])
   temp.info <- as.list(object@METADATA[id,])
 
